[package]
authors = ["Kyle Pfromer <kpfromer2@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "playground"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
switch-hal = "0.4.0"
# switch-hal = { git = "https://github.com/rubberduck203/switch-hal", branch = "master" }
# lsm303dlhc = "0.2.0"
# accelerometer = "0.12.0"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
panic-semihosting = "0.6"
debouncr = "0.2.2"

# For the stm32f303vc mcu
[dependencies.stm32f3xx-hal]
features = ["stm32f303xc", "rt"]
version = "0.9"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "playground"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
